@@ -1,0 +1,4 @@
+Test the way the 'nel' (number of elements) field is calculated.
+Since the summary formula is not explicitly provided using the
+'_chemical_formula_sum' data item the 'nel' field should be
+calculated from the calculated formula.
