@@ -1,0 +1,3 @@
+Test the way the 'nel' (number of elements) field is calculated.
+The explicitly provided formula should take presedence over the
+calculated formula.
