@@ -1,0 +1,1 @@
+../inputs/cif2cod/nel_no_formula_no_coordinates.cif
