@@ -1,0 +1,4 @@
+Test the way the 'nel' (number of elements) field is calculated.
+If both, the explicit summary formula and there is no sufficient
+information to calculate the summary formula, the 'nel' field should
+be set to 0.
