@@ -1,0 +1,25 @@
+# The data block does not contain a _chemical_formula_sum data item
+data_no_chemical_formula_sum
+_space_group_name_H-M_alt       'P 1'
+_space_group_name_Hall          'P 1'
+_journal_name_full              'Fake journal used for CIF software testing purposes'
+_publ_section_title             'Fake title used for CIF software testing purposes'
+_journal_year                   1970
+_journal_volume                 1970
+_journal_page_first             1
+_cell_formula_units_Z           1
+_cell_length_a                  5
+_cell_length_b                  5
+_cell_length_c                  5
+_cell_angle_alpha               90
+_cell_angle_beta                90
+_cell_angle_gamma               90
+loop_
+_atom_site_label
+_atom_site_type_symbol
+_atom_site_fract_x
+_atom_site_fract_y
+_atom_site_fract_z
+H H 0.5 0.5 0.5
+O O 0.75 0.75 0.75
+N N 0.33 0.33 0.33
