@@ -1,0 +1,3 @@
+scripts/cif2cod: tests/cases/cif2cod_062.inp data_no_chemical_formula_sum: WARNING, data item '_chemical_formula_sum' is absent.
+file;formula;calcformula;nel
+"no_chemical_formula_sum";"?";"- H N O -";"3"
