@@ -1,0 +1,2 @@
+file;formula;calcformula;nel
+"formula_sum_mismatch";"- H2 O -";"- H N O -";"2"
