@@ -1,0 +1,15 @@
+scripts/cif2cod: tests/cases/cif2cod_064.inp data_no_formula_no_coordinates: WARNING, data item '_chemical_formula_sum' is absent.
+scripts/cif2cod: tests/cases/cif2cod_064.inp data_no_formula_no_coordinates: WARNING, summary formula could not be calculated -- neither data item '_atom_site_label' nor data item '_atom_site_type_symbol' was found.
+scripts/cif2cod: tests/cases/cif2cod_064.inp data_no_formula_no_coordinates: WARNING, unit cell summary formula could not be calculated -- neither data item '_atom_site_label' nor data item '_atom_site_type_symbol' was found.
+scripts/cif2cod: tests/cases/cif2cod_064.inp data_no_formula_unknown_coordinates: WARNING, data item '_chemical_formula_sum' is absent.
+scripts/cif2cod: tests/cases/cif2cod_064.inp data_no_formula_unknown_coordinates: WARNING, argument "?" isn't numeric in multiplication (*) at <script_name> line <line_no>.
+scripts/cif2cod: tests/cases/cif2cod_064.inp data_no_formula_unknown_coordinates: WARNING, argument "?" isn't numeric in multiplication (*) at <script_name> line <line_no>.
+scripts/cif2cod: tests/cases/cif2cod_064.inp data_no_formula_unknown_coordinates: WARNING, argument "?" isn't numeric in multiplication (*) at <script_name> line <line_no>.
+scripts/cif2cod: tests/cases/cif2cod_064.inp data_no_formula_unknown_coordinates: WARNING, argument "?" isn't numeric in multiplication (*) at <script_name> line <line_no>.
+scripts/cif2cod: tests/cases/cif2cod_064.inp data_no_formula_unknown_coordinates: WARNING, argument "?" isn't numeric in multiplication (*) at <script_name> line <line_no>.
+scripts/cif2cod: tests/cases/cif2cod_064.inp data_no_formula_unknown_coordinates: WARNING, argument "?" isn't numeric in multiplication (*) at <script_name> line <line_no>.
+scripts/cif2cod: tests/cases/cif2cod_064.inp data_no_formula_unknown_coordinates: WARNING, data item '_chemical_formula_sum' is absent.
+file;formula;calcformula;nel
+"no_formula_no_coordinates";"?";NULL;"0"
+"no_formula_unknown_coordinates";"?";"- ? -";"0"
+"no_formula_unknown_coordinates";"?";"-  -";"0"
