@@ -5,6 +5,9 @@ cod-tools (unreleased)
       - updated the validate_SQL_types() subroutine to return an undef
         value instead of a value that is not compatible with the specified
         SQL CHAR/VARCHAR field;
+      - updated the 'cif2cod' subroutine to determine the number of elements
+        from the calculated formula instead of defaulting to '0' when the
+        summary formula is not explicitly provided;
       - updated the text of several warning messages.
 
 cod-tools (2.8)
